--- a/C/Web Processing, Scraping/README
+++ b/C/Web Processing, Scraping/README
@@ -1,3 +1,5 @@
+INSTRUCTIONS:
+
 This folder consists of three files: a bash script for downloading, a python program for extracting data using DOM and 
 inserting to mysql database, and a PHP script for presentation using the Apache web server.
 
